RESOLVED FIXED235933
scroll-margin-top doesn't work on inline elements
https://bugs.webkit.org/show_bug.cgi?id=235933
Summary scroll-margin-top doesn't work on inline elements
Simon Fraser (smfr)
Reported 2022-01-31 17:50:54 PST
https://codepen.io/etsisk/pen/dyZbgwq shows that `scroll-margin-top` doesn't work as expected.
Attachments
Patch (8.95 KB, patch)
2022-02-01 06:31 PST, Martin Robinson
no flags
Patch (9.71 KB, patch)
2022-02-01 07:58 PST, Martin Robinson
no flags
Simon Fraser (smfr)
Comment 1 2022-01-31 17:51:16 PST
Martin Robinson
Comment 2 2022-02-01 06:31:36 PST
EWS Watchlist
Comment 3 2022-02-01 06:33:38 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Martin Robinson
Comment 4 2022-02-01 07:58:49 PST
EWS
Comment 5 2022-02-02 01:14:08 PST
Committed r288947 (246676@main): <https://commits.webkit.org/246676@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450527 [details].
Note You need to log in before you can comment on or make changes to this bug.